--- a/resources/package.json
+++ b/resources/package.json
@@ -63,6 +63,7 @@
     "fancybox": "^3.0.1",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.1.0"
   }
 }
